--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -1,6 +1,5 @@
 <div class='main'>
 
-
 	<div class="nav">
 		<div><button type="action" name="act_character" >CHARACTER</button></div>
 		<div><button type="action" name="act_lifepath" >LIFEPATH & INVENTORY</button></div>
@@ -43,25 +42,27 @@
 
 			<input type="hidden" name="attr_hp_max" />
 
-			<div class="humanity">
-				<div class="title white-bg"><h3>HIT POINTS</h3></div>
-				<div class="humanity-table">
-					<div class="white-bg">CURRENT</div>
-					<div class="red-bg">MAX</div>
-					<div class="white-bg"><input type="number" name="attr_hp" /></div>
-					<div style="padding-top: 10px" class="red-bg">
-						<span name="attr_hp_max"></span>
-					</div>
+			<div class="hp-humanity">
+				<div class="white-bg"><h3>HIT POINTS</h3></div>
+				<div class="white-bg">
+					<span class="small">CURRENT</span>
+					<input type="number" name="attr_hp" />
+				</div>
+				<div class="red-bg" style="padding-top: 11px;">
+					<span class="small">MAX</span>
+					<span class=big name="attr_hp_max">MAX</span>
 				</div>
 			</div>
 
-			<div class="humanity">
-				<div class="title white-bg"><h3>HUMANITY</h3></div>
-				<div class="humanity-table">
-					<div class="white-bg">CURRENT</div>
-					<div class="red-bg">MAX</div>
-					<div class="white-bg"><input type="number" name="attr_Humanity" /></div>
-					<div class="red-bg"><input type="number" name="attr_Humanity_max" /></div>
+			<div class="hp-humanity">
+				<div class="white-bg"><h3>HUMANITY</h3></div>
+				<div class="white-bg">
+					<span class="small">CURRENT</span>
+					<input type="number" name="attr_Humanity" />
+				</div>
+				<div class="red-bg">
+					<span class="small">MAX</span>
+					<input type="number" name="attr_Humanity_max" />
 				</div>
 			</div>
 
