--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="red-bg" style="padding-top: 11px;">
 					<span class="small">MAX</span>
-					<span class=big name="attr_hp_max">MAX</span>
+					<span class=big name="attr_hp_max"></span>
 				</div>
 			</div>
 
