small fix to rearranging inventory and netrunning
the same problem exists with weapons armor, but will be applied after redesign of section

--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -841,23 +841,23 @@
 			</div>
 		</div>
 		<div class="inventory section">
-			<ul class="flex-table">
-				<li class="bg-yellow gear-name">Cash</li>
-				<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_cash" placeholder="Type here...">
-				</li>
-				<li class="bg-yellow gear-name">Ammunition</li>
-				<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_ammunition" placeholder="Type here...">
-				</li>
-				<li class="bg-black-2 gear-name">Gear</li>
-				<li class="bg-black-2 gear-notes">Notes</li>
-			</ul>
-
-			<fieldset class="repeating_gear">
-				<ul class="flex-table">
-					<li class="bg-white gear-name"><input type=text spellcheck=false name="attr_gearname" placeholder="Type here..."></li>
-					<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_gearnotes" placeholder="Type here..."></li>
-				</ul>
-			</fieldset>
+			<div style="position: relative"><ul class="flex-table">
+							<li class="bg-yellow gear-name">Cash</li>
+							<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_cash" placeholder="Type here...">
+							</li>
+							<li class="bg-yellow gear-name">Ammunition</li>
+							<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_ammunition" placeholder="Type here...">
+							</li>
+							<li class="bg-black-2 gear-name">Gear</li>
+							<li class="bg-black-2 gear-notes">Notes</li>
+						</ul>
+			
+						<fieldset class="repeating_gear">
+							<ul class="flex-table">
+								<li class="bg-white gear-name"><input type=text spellcheck=false name="attr_gearname" placeholder="Type here..."></li>
+								<li class="bg-white gear-notes"><input type=text spellcheck=false name="attr_gearnotes" placeholder="Type here..."></li>
+							</ul>
+						</fieldset></div>
 		</div>
 		<div class="personal section">
 			<div class="fashion"><h4>FASHION</h4>
