ammo input no longer overlaps with damage rolls

--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -639,10 +639,10 @@
 
 		<div class="weaponarmor section"> 
 			<div class="title">
-				<h1>WEAPONS AND ARMOR</h1>
+				WEAPONS & ARMOR
 			</div>
 
-			<div class="armor section">
+			<div class="armor">
 				<table>
 					<thead>
 						<tr>
@@ -672,7 +672,7 @@
 				</table>
 			</div>
 
-			<div class="section weapon">
+			<div class="weapon" style="position: relative">
 				<div class="flex-table">
 					<div class="bg-black-2 weapon-name">Weapon</div>
 					<div class="bg-black-2 weapon-type">Type</div>
@@ -714,7 +714,7 @@
 							</select>
 						</div>
 						<div class="bg-white ammo"><input type="number" name="attr_Ammo" />/<input type="number" name="attr_Ammo_max" /></div>
-						<div class="bg-white rof"><input type="number" name="attr_ShieldSP" /></div>
+						<div class="bg-white rof"><input type="number" name="attr_ROF" /></div>
 					</div>
 				</fieldset>
 			</div>
