small fix to Demolitions

--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -647,7 +647,7 @@
 					<div class="bg-white skill-name"><button name="roll_Demolitions" type="roll" class="txt-btn" value="&{template:skill} {{critroll=[[@{Total_Demolitions}+10+1d10]]}} {{failroll=[[@{Total_Demolitions}+1-1d10]]}} {{rollname=Demolitions}}  {{roll=[[@{Total_Demolitions}+1d10]]}}">Demolitions (x2) (TECH)</button></div>
 					<div class="bg-white skill-base"><input type="number" name="attr_LVL_Demolitions" value="0"  /></div>
 					<div class="bg-white skill-mod"><input type="number" name="attr_Misc_Demoltions" value="0"  /></div>
-					<div class="bg-white skill-total"><input type="number" name="attr_Total_Demolitions" value="@{Misc__Demolitions}+@{LVL_Demolitions}+@{Technique}" disabled="true" /></div>
+					<div class="bg-white skill-total"><input type="number" name="attr_Total_Demolitions" value="@{Misc_Demolitions}+@{LVL_Demolitions}+@{Technique}" disabled="true" /></div>
 				</div>
 				<div class="flex-table">
 					<div class="bg-white skill-name"><button name="roll_ElectronicsSecurity" type="roll" class="txt-btn" value="&{template:skill} {{critroll=[[@{Total_ElectronicsSecurity}+10+1d10]]}} {{failroll=[[@{Total_ElectronicsSecurity}+1-1d10]]}} {{rollname=Electronics/Security Tech}}  {{roll=[[@{Total_ElectronicsSecurity}+1d10]]}}">Elec/Security Tech (x2) (TECH)</button></div>
