small change to skill table row height

--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -328,7 +328,7 @@
 				</div>
 
 				<div class="flex-table">
-					<div class="bg-yellow skill-name">Languages (INT)</div>
+					<div class="bg-yellow skill-subcategory">Languages (INT)</div>
 				</div>			
 
 				<div class="flex-table">
@@ -360,7 +360,7 @@
 				</div>
 
 				<div class="flex-table">
-					<div class="bg-yellow skill-name">Local Expert (INT)</div>
+					<div class="bg-yellow skill-subcategory">Local Expert (INT)</div>
 				</div>
 
 				<div class="flex-table">
@@ -385,7 +385,7 @@
 				</div>
 
 				<div class="flex-table">
-					<div class="bg-yellow skill-name">Science (INT)</div>
+					<div class="bg-yellow skill-subcategory">Science (INT)</div>
 				</div>
 
 				<div class="flex-table">
@@ -472,7 +472,7 @@
 				</div>
 
 				<div class="flex-table">
-					<div class="bg-yellow skill-name">Play Instrument (TECH)</div>
+					<div class="bg-yellow skill-subcategory">Play Instrument (TECH)</div>
 				</div>
 
 				<div class="flex-table">
