set mookflag 0 to default

--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -3,7 +3,7 @@
 
 
 	<div class="nav">
-		<input type="hidden" class="mooktoggle" name="attr_mooksheet_flag" />
+		<input type="hidden" class="mooktoggle" name="attr_mooksheet_flag" value='0' />
 
 		<div class="character-mode"><button type="action" name="act_character" >CHARACTER</button></div>
 		<div class="mook-mode"><button type="action" name="act_mook" >MOOK</button></div>
@@ -1341,7 +1341,7 @@
 			<div class="option">
 				<div class="settings-title">ENABLE MOOK SHEET</div>
 				<div class='settings-checkbox'>
-					<input type="hidden" class="mooktoggle" name="attr_mooksheet_flag" />
+					<input type="hidden" class="mooktoggle" name="attr_mooksheet_flag" value=0/>
 					<button type="action" name="act_mooksheet" class="mooktoggle">
 						<span class="checked">✓</span>
 					</button>
