--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -809,7 +809,7 @@
 				<fieldset class="repeating_weapons">
 					<div class="flex-table">
 						<button type="roll" name="roll_weapon_dmg" style="display: none;" value="@{DMG}"></button>
-						<input type="hidden" name="attr_WeaponMod" />
+						<input type="hidden" name="attr_WeaponMod" value="@{Total_Melee}">
 						<div class="bg-white weapon-name"><button name="roll_attack" type="roll" class="txt-btn" value="&{template:attack} {{critroll=[[@{WeaponMod}+10+1d10]]}} {{@{Weapontype}=true}} {{rollname=[@{Weaponname}](~repeating_weapons_weapon_dmg)}} {{failroll=[[@{WeaponMod}+1-1d10]]}}  {{weapontype=@{Weapontype}}} {{roll=[[@{WeaponMod}+1d10]]}}">Attack:</button> <input type=text spellcheck=false name="attr_Weaponname" placeholder="Type here..."></div>
 						<div class="bg-white weapon-type">
 							<select name="attr_Weapontype" class="Weapontype">
